# cpp-demo

./: .gitignore  README.md
algorithm/: k_most_frequent_values.cpp  sort_custom_data_type.cpp
boost_unit_test_demo/: CMakeLists.txt  README.md
boost_unit_test_demo/include/mylib/: calc.h  fact.h
boost_unit_test_demo/src/: clac.cpp  fact.cpp
boost_unit_test_demo/test/: test_calc.cpp  test_fact.cpp
data_structure/: DisjointForests.cpp  DisjointForests.md  README.md
effective_cpp/chapter1/: compile_time_array_size.cpp
java_invoke_cpp/: .gitignore  README.md  Sample1.h  Sample1.java  evaluation.cpp
mem_alloc/: Makefile  README.md  mem_alloc.cpp
mesh_opt/: .gitignore  CMakelists.txt  gen.sh  simpify.sh  simplication.cpp
multi_thread_demo/: CMakeLists.txt  demo  main.cpp
